--- a/mambotokea/templates/app/home.html
+++ b/mambotokea/templates/app/home.html
@@ -5,7 +5,7 @@
 
 <div class="container home-container">
         <div class="left col-md-3">
-           {% include 'app/location_component.html' %}
+           {% include 'app/location.html' %}
         </div>
 
         <div class="middle col-md-6">
