--- a/mambotokea/templates/app/hood_form.html
+++ b/mambotokea/templates/app/hood_form.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container">
     <div class="form-wrapper my-3">
-        <h4>create hood</h4>
+        <h4>Add Neighbourbood</h4>
         <form action="" method="POST">
             {% csrf_token %}
             {% bootstrap_form form %}       
