--- a/mambotokea/templates/app/location.html
+++ b/mambotokea/templates/app/location.html
@@ -1,8 +1,6 @@
-<h4>Browse Hoods</h4>
+<h4>location</h4>
 <hr>
-<div class="locale-name">
-    <a href="{% url 'home' %}">All</a>
-</div>
+
 {% for locale in locations %}
 
     <div class="locale-name">
