--- a/mambotokea/templates/app/profile.html
+++ b/mambotokea/templates/app/profile.html
@@ -5,7 +5,7 @@
 <div class='profile-container container'>
     <div class="row">
         <div class="col-md-3">
-            {% include 'app/location_component.html' %}
+            {% include 'app/location.html' %}
         </div>
     
         <div class="col-md-6 profile-col">
