--- a/mambotokea/templates/app/feed_component.html
+++ b/mambotokea/templates/app/feed_component.html
@@ -1,24 +1,27 @@
 <div>
     {% for hood in hoods %} 
 
-        <div class="hood my-3">
+        <div>
         
-            <a href="{% url 'join_hood' hood.id %}"><span class="badge bg-success">join hood</span></a>
-            <a href="{% url 'quit_hood' hood.id  %}"><span class="badge bg-warning">quit hood</span></a>            
+            
+            
 
-            {% if request.user == hood.host %}
+            <h4><a href="{% url 'hood' hood.id %}"> <i style="color: black;">Name: </i> {{ hood.name }}</a></h4>
+
+            <a href="{% url 'user_profile' hood.host.id %}"> <i style="color: black;"> Host: </i>{{ hood.host.username }}</a><br>
+            
+            <small> <i style="color: black;">Location: </i>{{hood.location.name}}</small><br>
+            <a href="{% url 'join_hood' hood.id %}"><span  style="background-color: plum;">join Neighbourbood</span></a>
+            <a href="{% url 'quit_hood' hood.id  %}"><span class="badge bg-warning">Exit Neighbourbood</span></a>            
+{% if request.user == hood.host %}
                 <a href="{% url 'update_hood' hood.id %}"><span class="badge bg-secondary">edit</span></a>
                 <a href="{% url 'delete_hood' hood.id %}"><span class="badge bg-danger">delete</span></a>
-                <span class="badge bg-success">Success</span>
+                <!-- <span class="badge bg-success">Success</span> -->
 
             {% endif %}
-
-            <a href="{% url 'user_profile' hood.host.id %}">@{{ hood.host.username }}</a>
-            <h4><a href="{% url 'hood' hood.id %}">{{ hood.name }}</a></h4>
-            
-            <small>{{hood.location.name}}</small>
             <hr>
 
+            
         </div>
 
     {% endfor %}
