--- a/mambotokea/templates/app/home.html
+++ b/mambotokea/templates/app/home.html
@@ -3,24 +3,27 @@
 {% block content %} 
 
 
-<div class="container home-container">
-        <div class="left col-md-3">
+<div class="container">
+   <div class="row">
+
+   
+        <div class="col-md-3">
            {% include 'app/location.html' %}
         </div>
 
-        <div class="middle col-md-6">
+        <div class=" col-md-6">
             <h5>{{ hood_count }} hoods available</h5>
-            <a href="{% url 'create_hood' %}"><span class="badge bg-success my-3">create hood</span></a>
+            <a href="{% url 'create_hood' %}"><span class="badge bg-success my-3">Add Neighbourbood</span></a>
 
             {% include 'app/feed_component.html' %}
             
         </div>
         
-        <div class="right col-md-3">
+        <div class="col-md-3">
            {% include 'app/activity_component.html' %}
         </div>
   
-
+      </div>
 </div>
 
 {% endblock %}
