--- a/mambotokea/templates/app/home.html
+++ b/mambotokea/templates/app/home.html
@@ -5,10 +5,10 @@
 
 <div class="container">
    <div class="row">
-
    
-        <div class="col-md-3">
+        <div class="col-md-6">
            {% include 'app/location.html' %}
+           {% include 'app/activity_component.html' %}
         </div>
 
         <div class=" col-md-6">
@@ -19,9 +19,8 @@
             
         </div>
         
-        <div class="col-md-3">
-           {% include 'app/activity_component.html' %}
-        </div>
+        <!-- <div class="col-md-3">
+        </div> -->
   
       </div>
 </div>
