--- a/mambotokea/templates/home.html
+++ b/mambotokea/templates/home.html
@@ -7,15 +7,15 @@
    <div class="row">
    
         <div class="col-md-6">
-           {% include 'app/location.html' %}
-           {% include 'app/activity_component.html' %}
+           {% include 'location.html' %}
+           {% include 'activity_component.html' %}
         </div>
 
         <div class=" col-md-6">
             <h5>{{ hood_count }} hoods available</h5>
             <a href="{% url 'create_hood' %}"><span class="badge bg-success my-3">Add Neighbourbood</span></a>
 
-            {% include 'app/feed_component.html' %}
+            {% include 'feed_component.html' %}
             
         </div>
         
